--- a/index.html
+++ b/index.html
@@ -2,10 +2,48 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hangman with Rick & Morty</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	
+	<div class="container-fluid">
+		<div class="row" id="grid-body">
+			<div class="col-sm-3" id="lside">
+				<img class="img-fluid" src="assets/images/rick.png" id="rick-img">
+			</div>
+			<div class="col-sm-6" id="center">
+				<div class="row">
+					<div class="col-sm-9 rick">
+						<img class="img-fluid" src="assets/images/Rick_and_Morty_logo.png" id="logo">
+ 					</div>
+ 					<div class="col-sm-3 hangman">
+ 						<img class="img-fluid" src="assets/images/hangman-logo.jpg">
+ 					</div>
+				</div>
+				<div class="row" id="main-screen-row">
+					<div class="well well-lg" id="main-screen">
+						<div id="lives-wins-losses"></div>
+						<div id="wordGuess"></div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Available Letters</h3>
+						</div>
+						<div class="panel-body" id="letterBank">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-3" id="rside">
+				<img class="img-fluid" src="assets/images/moarty.png" id="moarty-img">
+			</div>
+		</div>
+	</div>
 	<script src="assets/javascript/game.js" type="text/javascript"></script>
 </body>
 </html>
